<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/airport_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/details"
    tools:context="com.jordan.raven2.ShowAirportActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/airport_name"
        android:text="@string/airport_name"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/airport_city"
        android:text="@string/airport_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/airport_name" />

    <ImageView
        android:id="@+id/airport_diagram"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:contentDescription="@string/airport_diagram"
        android:layout_below="@id/airport_city" />
    
</RelativeLayout>
